k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jerney-ingress
  namespace: jerney
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathTypes: Prefix
            backend:
              service:
                name: frontend_service
                port:
                 number: 80
          - path: /api
            pathTypes: Prefix
            backend: 
              service:
                name: backend-service
                port: 
                 number: 5000
